# scripts

./: .gitignore  Makefile
cyclesink/: Main.hs  Makefile  cyclesink.cabal
launch-polybar/: launch-polybar.cabal  stack.yaml
launch-polybar/src/: Main.hs
polybar-adb/: Makefile  polybar-adb.cabal
polybar-adb/src/: Main.hs
shell/: Makefile  backup.service  backup.sh  backup.timer  calendar_popup.sh  decpdf.sh  magit.sh  powermenu.sh  rofi-powermenu.sh  rofimoji.sh  screenshot.sh  screenshotX.sh  wofimoji.sh  wpassmenu.sh
shell/oneoffs/: audiobook.sh
